--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <p class="copyright">Copyright &copy; 2020 Spaced Dev</p>
       <ul class="social">
         <li><a href="#"><img src="assets/icon_fb.svg" alt="facebook"></a></li>
-        <li><a href="#"><img src="assets/icon_tw.svg" alt="twitter"></a></li>
+        <li><a href="#"><img src="assets/icon_tw.png" alt="twitter"></a></li>
       </ul>
     </div>
   </footer>
